--- a/view/question/search.index.tpl.html
+++ b/view/question/search.index.tpl.html
@@ -80,6 +80,16 @@ use \Xpmse\T;
 										创建时间正序
 									<?php elseif ( $query['order'] == 'publish_asc') :?>
 										发布时间正序
+									<?php elseif ( $query['order'] == 'priority_asc') :?>
+										优先级
+									<?php elseif ( $query['order'] == 'agree_desc') :?>
+										赞同量
+									<?php elseif ( $query['order'] == 'view_desc') :?>
+										浏览量
+									<?php elseif ( $query['order'] == 'money_desc') :?>
+										悬赏金额
+									<?php elseif ( $query['order'] == 'coin_desc') :?>
+										悬赏积分
 									<?php else:?>
 										排序方式
 									<?php endif;?>
@@ -106,6 +116,31 @@ use \Xpmse\T;
 									<li>
 										<a href="javascript:search('order','publish_asc')">
 										   发布时间正序
+										</a>
+									</li>
+									<li>
+										<a href="javascript:search('order','priority_asc')">
+										   优先级
+										</a>
+									</li>
+									<li>
+										<a href="javascript:search('order','agree_desc')">
+										   赞同量
+										</a>
+									</li>
+									<li>
+										<a href="javascript:search('order','view_desc')">
+										   浏览量
+										</a>
+									</li>
+									<li>
+										<a href="javascript:search('order','money_desc')">
+										   悬赏金额
+										</a>
+									</li>
+									<li>
+										<a href="javascript:search('order','coin_desc')">
+										   悬赏积分
 										</a>
 									</li>
 									<li>
